.env file update

--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,5 @@
-PORT=8000
+PORT=3306
+DB_HOST= bay4r90kuivm5ppxqhb5-mysql.services.clever-cloud.com
+DB_USER= uvaue9creeecfjkk
+DB_NAME= bay4r90kuivm5ppxqhb5
+DB_PASSWORD= OEvesIy7lcHFbV2xyiE4
